# vehicle_state_estimation_with_LSTM

./: .gitignore  .pre-commit-config.yaml  README.md  data_operation.py  default_configs.json  main.py  pyproject.toml
data/processed/: sin_dataset.py  trigonometric_dataset.py
dev_utils/: new_data_file_handler.py
env_config/: .env.absolute  .env.relative  .env.relative.example  env_config_reader.py
libs/: .env.absolute  .env.relative  s3_libs.py
log/: log.text
models/: sin_LSTM.py
models/sin2cos_lstm/: sin2cos_lstm_hd1_100_nl_2_lr_0.001.pth
models/sin_LSTM/: sin_lstm_hd1_100_nl_2_lr_0.001.pth
notebooks/: 1.0-suhyun-sin-model-train.ipynb  2.0-suhyun-sin2cos-model-train.ipynb  3.0-suhyun-6dof-model-train.ipynb  4.0-seungeun.kang-LSTM-predict-sin-from-sin.ipynb  5.0-seungeun.kang-LSTM-predict-cos-from-sin.ipynb  6.0-seungeun.kang-LSTM-chirp-signal.ipynb  7.0-seungeun.kang-LSTM-predict-sum-from-signals.ipynb  Untitled.ipynb  train_sin_function_with_LSTM.ipynb
runs/Cos2SinLSTM_hd1_100_nl_2_lr_0.001/: events.out.tfevents.1675406384.A11910ui-MacBookPro.local.48997.0  events.out.tfevents.1675406862.A11910ui-MacBookPro.local.54527.0  events.out.tfevents.1675407021.A11910ui-MacBookPro.local.56460.0  events.out.tfevents.1675407127.A11910ui-MacBookPro.local.58170.0  events.out.tfevents.1675407158.A11910ui-MacBookPro.local.58501.0  events.out.tfevents.1675407767.A11910ui-MacBookPro.local.65459.0  events.out.tfevents.1675407828.A11910ui-MacBookPro.local.66229.0  events.out.tfevents.1675408647.A11910ui-MacBookPro.local.75482.0  (+6 more)
src/libs/: dataset_utils.py  gcp_utils.py  (+3 more)
(+62 files in other folders)
