[tool.poetry]
name = "vehicle-state-estimation-with-lstm"
version = "0.1.0"
description = ""
authors = ["suhyun.kim <suhyun.kim@42dot.ai>"]
readme = "README.md"
packages = [{include = "vehicle_state_estimation_with_lstm"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
pandas = "^1.5.2"
numpy = "^1.24.1"
jupyterlab = "^3.5.2"
boto3 = "^1.26.50"
python-dotenv = "^0.21.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
